--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gulp-include": "^2.4.1",
     "gulp-newer": "^1.4.0",
     "gulp-sass": "^6.0.1",
-    "gulp-svgmin": "^4.1.0",
+    "gulp-svgstore": "^9.0.0",
     "gulp-uglify-es": "^3.0.0",
     "gulp-webp": "^4.0.1",
     "sass": "^1.89.2"
